--- a/Rodriguez_Lab6.ipynb
+++ b/Rodriguez_Lab6.ipynb
@@ -5,9 +5,7 @@
     "colab": {
       "name": "Rodriguez_Lab6.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVzCs+EgwaebblLW1ZXloM",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/maryadriennerdrgz/Linear-Algebra/blob/master/Rodriguez_Lab6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
